# opt

./: .gitignore  CMakeLists.txt  Compiler.cmake  External.cmake  README.md  minimize.h  opt.h
doc/: fit_functions.md  fitting_multiple_parameters.md  function_parameters.md  genetic.md  genetic_algorithm.md  pattern_search.md
main/doc/first/: first.cc
main/doc/genetic-custom/: genetic-custom.cc
main/doc/genetic-custom-mutation/: genetic-custom-mutation.cc
main/doc/genetic-custom-object/: genetic-custom-object.cc
main/doc/genetic-custom-object-crossover/: genetic-custom-object-crossover.cc
main/doc/genetic-custom-object-mutation/: genetic-custom-object-mutation.cc
main/doc/multiple-parameters/: multiple-parameters.cc
main/doc/pattern-search/: pattern-search.cc
main/test/compare-rosenbrock/: compare-rosenbrock.cc
main/test/genetic-rosenbrock/: genetic-rosenbrock.cc
main/test/genetic-sqrt/: genetic-sqrt.cc
main/test/genetic-tuple-mutation/: genetic-tuple-mutation.cc
main/test/genetic-tuple-operators/: genetic-tuple-operators.cc
main/test/hookejeeves-rosenbrock/: hookejeeves-rosenbrock.cc
main/test/pattern-search-rosenbrock/: pattern-search-rosenbrock.cc
methods/: genetic.h
methods/genetic/: bitwise.h  concepts.h  crossover.h  genetic-best.h  genetic-stochastic-best.h  genetic-stochastic.h  genetic.h  initialization.h  int.h  logger.h  minimize.h  mutation.h  real.h  tuple.h  vector.h
methods/hooke-jeeves/: hooke-jeeves.h  minimize.h
methods/pattern-search/: logger.h  minimize.h  pattern-search.h
test/genetic/: genetic-sqrt.cc
test/genetic-rosenbrock/: genetic-rosenbrock.cc
test/genetic-sqrt/: genetic-sqrt.cc
utils/: callable-tuple.h  concepts.h  null-ostream.h  test-functions.h  traits.h  tuple-array.h
